[package]
name = "circular_buffer"
description = "A circular buffer implementation for Rust"
version = "0.1.0"
authors = ["Reinout Roels"]
edition = "2018"
repository = "https://github.com/rroels/rust-circular-buffer"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.7.3"
